log
Thu 14 Sep 2023 03:00:39 AM UTC: 
 tests:  1|8
total_score: 0/70
29afcfb
Thu 14 Sep 2023 03:02:39 AM UTC: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
9695c0c
Thu 14 Sep 2023 03:04:59 AM UTC: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:91:23: error: ‘curren’ undeclared (first use in this function); did you mean ‘current’?
   91 |             current = curren->left;
      |                       ^~~~~~
      |                       current
treemap.c:91:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
892c674
Thu 14 Sep 2023 03:05:07 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 5/70
39d43e3
Thu 14 Sep 2023 03:06:11 AM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  5|7
total_score: 5/70
32c516c
Thu 14 Sep 2023 03:08:32 AM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
6d70ada
Thu 14 Sep 2023 03:10:15 AM UTC: 
 treemap.c | 35 +++++++++++++++++++++++++++++++++++
 1 file changed, 35 insertions(+)
 tests:  6|7
total_score: 5/70
ab85a09
Thu 14 Sep 2023 03:10:54 AM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
94eb83c
Thu 14 Sep 2023 03:11:46 AM UTC: 
 treemap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  6|7
total_score: 5/70
163162d
Thu 14 Sep 2023 03:13:47 AM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  8|6
total_score: 5/70
f277425
Thu 14 Sep 2023 03:14:48 AM UTC: 
 treemap.c | 38 ++++++++++++++++++++++++++++++++++++++
 1 file changed, 38 insertions(+)
 tests:  8|6
total_score: 5/70
5b60bc0
Thu 14 Sep 2023 03:16:03 AM UTC: 
 treemap.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  8|6
total_score: 5/70
7265a6f
Thu 14 Sep 2023 03:17:24 AM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  8|6
total_score: 5/70
c3923ec
Thu 14 Sep 2023 03:19:45 AM UTC: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  8|6
total_score: 5/70
e9e3138
Thu 14 Sep 2023 03:20:31 AM UTC: 
 treemap.c | 94 +++++++++++++++++++++++++++++++++------------------------------
 1 file changed, 50 insertions(+), 44 deletions(-)
 tests:  8|6
total_score: 5/70
2e35ead
Thu 14 Sep 2023 03:21:25 AM UTC: 
 treemap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  8|6
total_score: 5/70
5a84bcf
Thu 14 Sep 2023 03:21:54 AM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  8|6
total_score: 5/70
8c817c4
Thu 14 Sep 2023 03:23:23 AM UTC: 
 treemap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  10|5
total_score: 10/70
0a3a586
Thu 14 Sep 2023 03:24:07 AM UTC: 
 treemap.c | 28 ++++++++++++++++++++++------
 1 file changed, 22 insertions(+), 6 deletions(-)
/nix/store/v8imx1nvyz0hgvx9cbcmh6gp4ngw3ffj-binutils-2.35.1/bin/ld: /tmp/ccGRv6nf.o: in function `first_test1':
test.c:(.text+0xf25): undefined reference to `firstTreeMap'
/nix/store/v8imx1nvyz0hgvx9cbcmh6gp4ngw3ffj-binutils-2.35.1/bin/ld: /tmp/ccGRv6nf.o: in function `first_test2':
test.c:(.text+0xfd8): undefined reference to `firstTreeMap'
collect2: error: ld returned 1 exit status
Compilation failed
9ec9c35
Thu 14 Sep 2023 03:24:38 AM UTC: 
 treemap.c | 10 +++-------
 1 file changed, 3 insertions(+), 7 deletions(-)
/nix/store/v8imx1nvyz0hgvx9cbcmh6gp4ngw3ffj-binutils-2.35.1/bin/ld: /tmp/ccRT4wiV.o: in function `first_test1':
test.c:(.text+0xf25): undefined reference to `firstTreeMap'
/nix/store/v8imx1nvyz0hgvx9cbcmh6gp4ngw3ffj-binutils-2.35.1/bin/ld: /tmp/ccRT4wiV.o: in function `first_test2':
test.c:(.text+0xfd8): undefined reference to `firstTreeMap'
collect2: error: ld returned 1 exit status
Compilation failed
fcb3cd9
Thu 14 Sep 2023 03:25:03 AM UTC: 
 treemap.c | 23 ++++++++++++++++++++---
 1 file changed, 20 insertions(+), 3 deletions(-)
 tests:  15|4
total_score: 25/70
b20df9a
Thu 14 Sep 2023 03:25:33 AM UTC: 
 treemap.c | 13 +++----------
 1 file changed, 3 insertions(+), 10 deletions(-)
 tests:  15|4
total_score: 25/70
26096e5
Thu 14 Sep 2023 03:26:47 AM UTC: 
 treemap.c | 74 ++++++++++++++++++++++++++-------------------------------------
 1 file changed, 30 insertions(+), 44 deletions(-)
 tests:  15|4
total_score: 25/70
0189a91
Thu 14 Sep 2023 03:27:48 AM UTC: 
 treemap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  15|4
total_score: 25/70
e1e36ef
Thu 14 Sep 2023 03:28:32 AM UTC: 
 treemap.c | 27 +++++++++++++--------------
 1 file changed, 13 insertions(+), 14 deletions(-)
 tests:  15|4
total_score: 25/70
8af43a1
Thu 14 Sep 2023 03:30:18 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
d4e4afe
Thu 14 Sep 2023 03:32:34 AM UTC: 
 treemap.c | 27 ++++++++++++---------------
 1 file changed, 12 insertions(+), 15 deletions(-)
 tests:  15|4
total_score: 25/70
53d6f64
Thu 14 Sep 2023 03:33:03 AM UTC: 
 treemap.c | 24 +++++++++++++-----------
 1 file changed, 13 insertions(+), 11 deletions(-)
 tests:  15|4
total_score: 25/70
5a9b09b
